libmenu: Don't try to unref potentially NULL pointers

When a DIRECTORY desktop entry fails to load, we'll try to unref
some NULL pointers. This was causing some warnings.

https://bugzilla.gnome.org/show_bug.cgi?id=657042